# fastapi-classbase

./: LICENSE  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
faclassbase/: api.py
src/faclsbase/: __init__.py  api.py  base_api.py
test/: extend.py  test.py
