[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-classbase"
version = "0.1.0"
description = "FastAPI ClassBase API"
readme = "readme.md"
authors = [{ name = "omidekz", email = "omidekz@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "makefun==1.14.0",
    "pydantic==1.9.1",
    "typing-extensions==4.3.0",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/omidekz/fastapi-classbase"
