[metadata]
name = faclassbase
version = 0.1.0
author = omidekz
author_email = omidekz@gmail.com
description = A FastAPI class-base API Package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/omidekz/fastapi-classbase
project_urls =
    Bug Tracker = https://github.com/omidekz/fastapi-classbase/-/issues
    repository = https://github.com/omidekz/fastapi-classbase
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = faclassbase
packages = find:
python_requires = >=3.6

[options.packages.find]
where = faclassbase